test/data/semantic-errors/type-mismatch-argument-input.ava
var x = "hello";

var thisFunction = (x:int) -> return x + 1;

thisFunction(x);